8.0-? (7/19/2019)
-----
Restoring graphical pars in various plot functions
(thanks to Ludger Sandig for the patch)

8.0-0 (06/18/2019)
-----
Support for wpp2019.

New expression "E" for the ex column of the life table (life expectancy at age x).

pop.predict can run in parallel.

Age-specific mortality is now computed using MortCast functions.

Added mortality methods for PMD, HIVmortmod, LogQuad and blends of any two methods. Arguments lc.for.all and lc.for.hiv control if Lee-Carter is used (TRUE) or methods set in the vwBaseYear dataset. Added dependency on HIV.LifeTables.

Added aggregation of mortality rates. Added dependency on the DemoTools package.

Various bug fixes.

7.0-1 (04/02/2019)
-----
Fixed bug in writing summary for cases when projection is generated 
for one country only (thanks to Anna Janicka)

7.0-0 (10/11/2018)
-----
Support for subnational population projections:
    - functions pop.predict.subnat & pop.aggregate.subnat
    - added subnational data for Canada


6.2-4 (03/15/2018)
-----
Fixed a bug that caused the projection to fail when the option 
stringsAsFactors was set to FALSE (reported by Jim Oeppen).

Fixed an issue with PASFR when projecting beyond 2100. 

6.2-3 (10/22/2017)
-----
Replace NA values of historical population with 0. 
(In wpp2017 the open age group for years before 1990 is 85+ and thus the pop datasets are NA for old ages. This was problematic in various sum and plotting functions.)

6.2-2 (10/11/2017)
-----
Fixed bug in adjusting function.
Unit test for adjustments.

6.2-0/1 (09/29/2017)
------
Changes needed to work with wpp2017, including setting new default for wpp.year.

6.1-1 (08/09/2017)
-----
Accent syntax changed in CITATION (request from CRAN).

6.1-0 (04/21/2017)
-----
Added function project.pasfr for projecting PASFR outside of pop.predict (thanks to Igor Ribeiro).

6.0-5
-----
Truncation of life tables to a given open age group (thanks to Patrick Gerland) --> Function 